# Riddle

./: .gitignore  README.md  ci.ps1  playwright.config.py  pyproject.toml  render.yaml  report.md  tmp.txt
.github/: copilot-instructions.md  static_wordle_architecture.md
.github/instructions/: html_css_test_step1.instructions.md  html_css_test_step2.instructions.md  html_css_test_step3.instructions.md  html_css_test_step4.instructions.md  html_css_test_step4b.instructions.md  html_css_test_step5.instructions.md  static_wordle_architecture.instructions.md
.github/workflows/: ci.yml  keep-alive.yml  pr-preview-cleanup.yml  pr-preview.yml
benchmarks/: README.md  __init__.py  benchmark_cross_hints_matrix.py  benchmark_opening_entropy.py  benchmark_wordle_all.py
data/: .gitignore
data/words_lists/: wordle_list_EN_L3_base.txt  wordle_list_EN_L4_base.txt  wordle_list_EN_L5_base.txt  wordle_list_EN_L6_base.txt  wordle_list_EN_L7_base.txt  wordle_list_EN_L8_base.txt  wordle_list_EN_L9_base.txt  wordle_list_FR_L26_base.txt  wordle_list_FR_L27_base.txt  wordle_list_FR_L3_base.txt  wordle_list_FR_L4_base.txt  wordle_list_FR_L5_base.txt  wordle_list_FR_L6_base.txt  wordle_list_FR_L7_base.txt  wordle_list_FR_L8_base.txt  wordle_list_FR_L9_base.txt
docs/: .env.example  CROSS_HINTS_MATRIX.md  DEPLOYMENT.md  GAME_SERVER_ARCHITECTURE.md  index.html
docs/pr-10/: preview.html
pr-10/: index.html
pr-14/: style.css
pr-17/test-screenshots/: generate_screenshots.py
pr-18/: style.css
pr-6/: game.js  index.html
pr-9/: game.js  style.css
src/: __init__.py  common.py  cross_words.py  gamle.py  main.py  main_assistant.py  main_cluster.py  main_cross_words_game.py  main_riddle_game_server.py  main_semantic_game.py  main_similarity_matrix_generator.py  main_wordle_game.py  main_wordle_opening.py  play_wordle_cli.py  riddle.py  riddle_game.py  server_game.py  similarity_matrix_codec.py  simple_wordle_game.py
src/cross_word/: __init__.py  main_cross_words_game.py  main_generate_word_list.py
src/riddle/: __init__.py  common.py  game_server.py  game_state.py  lexicon_parser.py  main_cluster.py  riddle_game.py  (+4 more)
static/: index.html
tests/: test_cluster.py  test_game_assistant.py  test_similarity_matrix_codec.py  test_wordle_cli.py
tmp/: debug_measurements.py  generate_screenshots.py
(+47 files in other folders)
