[project]
name = "riddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coordinatus>=0.3.0",
    "fastapi>=0.128.0",
    "gensim>=4.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "ortools>=9.14.6206",
    "pyjwt>=2.10.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
