[project]
name = "riddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coordinatus>=0.3.0",
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "pyjwt>=2.10.1",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "gensim>=4.4.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.11.0.86",
    "ortools>=9.15.6755",
    "playwright>=1.49.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.0",
    "ruff>=0.14.13",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ty>=0.0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
